Add scrapy and headless cms